Sun Aug 24 11:42:21 GMT 2008  Olly Betts <olly@survex.com>

	* common/Makefile.mk: Fix build with --enable-log=profile.

Sun Aug 24 12:41:22 BST 2008  Olly Betts <olly@survex.com>

	* HACKING: Add a bit of discussion of --enable-log=profile.  Tweak
	  formatting in one place and wording in another.

Sat Aug 23 00:48:40 GMT 2008  Olly Betts <olly@survex.com>

	* tests/collate-test: Only update files which have changed to avoid
	  rebuilding all apitest's source files when only one has changed.

Fri Aug 22 01:02:57 GMT 2008  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lt: Merge upstream "Check-in Number: 5571"
	  (no code changes in our modified version).

Fri Aug 22 01:00:15 GMT 2008  Olly Betts <olly@survex.com>

	* queryparser/lemon.c: Fix comment typo.

Fri Aug 22 00:55:26 GMT 2008  Olly Betts <olly@survex.com>

	* queryparser/lemon.c: Merge upstream "Check-in Number: 5564".

Fri Aug 22 00:44:14 GMT 2008  Olly Betts <olly@survex.com>

	* queryparser/lemon.c,queryparser/queryparser.lt: Merge upstream
	  "Check-in Number: 5488" and "5563".
	* queryparser/queryparser.lt: Fix compilation for previous merge
	  (I fixed it in the generated file before!)

Fri Aug 22 00:07:22 GMT 2008  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lt: Merge upstream "Check-in Number: 5472".

Thu Aug 21 04:15:41 GMT 2008  Olly Betts <olly@survex.com>

	* configure.ac: Remove code which checks for --enable-debug and
	  --enable-debug-verbose (deprecated since 1.0.0) and gives an error
	  pointing to the replacements.
	* docs/deprecation.rst: Document the replacements here.

Thu Aug 21 00:57:52 GMT 2008  Olly Betts <olly@survex.com>

	* common/omdebug.h: Remove DEBUGLINE completely.
	* backends/flint/flint_table.cc,backends/inmemory/inmemory_database.cc,
	  queryparser/queryparser.lt: Replace remaining DEBUGLINE uses.
	* backends/inmemory/inmemory_database.cc: Don't need <list>.

Thu Aug 21 00:37:08 GMT 2008  Olly Betts <olly@survex.com>
